--- a/knowl/investigation-38.html
+++ b/knowl/investigation-38.html
@@ -16,7 +16,7 @@
 </h4>
 <div class="introduction"><p>Let <span class="process-math">\(A=\begin{bmatrix} 3\amp -1\amp 0 \\2\amp 0\amp -7
 \\ 4\amp 2\amp 6 \end{bmatrix}\text{,}\)</span> <span class="process-math">\(B=\begin{bmatrix} 6\amp -2\amp 0 \\3\amp 0\amp -21 \\ 4\amp 2\amp 6
-\end{bmatrix}\text{,}\)</span> \break and <span class="process-math">\(C=\begin{bmatrix} 1\amp 0\amp 0 \\0\amp 1\amp 0\\1\amp 1\amp 1
+\end{bmatrix}\text{,}\)</span> and <span class="process-math">\(C=\begin{bmatrix} 1\amp 0\amp 0 \\0\amp 1\amp 0\\1\amp 1\amp 1
 \end{bmatrix}\text{.}\)</span></p></div>
 <article class="task exercise-like"><h5 class="heading"><span class="codenumber">(a)</span></h5>
 <p><span class="process-math">\(A+B^T=\)</span></p></article><article class="task exercise-like"><h5 class="heading"><span class="codenumber">(b)</span></h5>
