--- a/sec_matrix_ops.html
+++ b/sec_matrix_ops.html
@@ -173,7 +173,7 @@ window.MathJax = {
 </h4>
 <div class="introduction" id="introduction-18"><p id="p-189">Let <span class="process-math">\(A=\begin{bmatrix} 3\amp -1\amp 0 \\2\amp 0\amp -7
 \\ 4\amp 2\amp 6 \end{bmatrix}\text{,}\)</span> <span class="process-math">\(B=\begin{bmatrix} 6\amp -2\amp 0 \\3\amp 0\amp -21 \\ 4\amp 2\amp 6
-\end{bmatrix}\text{,}\)</span> \break and <span class="process-math">\(C=\begin{bmatrix} 1\amp 0\amp 0 \\0\amp 1\amp 0\\1\amp 1\amp 1
+\end{bmatrix}\text{,}\)</span> and <span class="process-math">\(C=\begin{bmatrix} 1\amp 0\amp 0 \\0\amp 1\amp 0\\1\amp 1\amp 1
 \end{bmatrix}\text{.}\)</span></p></div>
 <article class="task exercise-like" id="task-65"><h5 class="heading"><span class="codenumber">(a)</span></h5>
 <p id="p-190"><span class="process-math">\(A+B^T=\)</span></p></article><article class="task exercise-like" id="task-66"><h5 class="heading"><span class="codenumber">(b)</span></h5>
@@ -193,7 +193,7 @@ window.MathJax = {
 <p id="p-196">The sum of two symmetric <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrices is symmetric.</p></article><article class="theorem theorem-like" id="theorem-10"><h4 class="heading">
 <span class="type">Theorem</span><span class="space"> </span><span class="codenumber">2.21</span><span class="period">.</span>
 </h4>
-<p id="p-197">If <span class="process-math">\(A\)</span> is a symmetricmatrix, then <span class="process-math">\(kA\)</span> is symmetric.</p></article></section><section class="subsection" id="subsection-3"><h3 class="heading hide-type">
+<p id="p-197">If <span class="process-math">\(A\)</span> is a symmetric matrix, then <span class="process-math">\(kA\)</span> is symmetric.</p></article></section><section class="subsection" id="subsection-3"><h3 class="heading hide-type">
 <span class="type">Subsection</span> <span class="codenumber"></span> <span class="title">Special Types of Matrices</span>
 </h3>
 <p id="p-198">A <dfn class="terminology">square</dfn> matrix is a matrix that has the same number of rows and columns. A <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix <span class="process-math">\(A\)</span> is said to be <dfn class="terminology">upper triangular</dfn> if <span class="process-math">\(A_{i,j}=0\)</span> whenever <span class="process-math">\(\gt j\text{.}\)</span> Similarly, a matrix <span class="process-math">\(A\)</span> is <dfn class="terminology">lower triangular</dfn> if <span class="process-math">\(A_{i,j}=0\)</span> whenever <span class="process-math">\(i\lt j\text{.}\)</span> We usually consider square matrices when we talk about upper or lower triangular, but it may be helpful to consider non-square cases.</p>
