--- a/ch_vector_spaces.html
+++ b/ch_vector_spaces.html
@@ -130,14 +130,20 @@ window.MathJax = {
 </ul>
 </li>
 <li class="link active">
-<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li></ul>
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul>
+<li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li>
+<li><a href="section-11.html" data-scroll="section-11" class="internal">Subspaces</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
 <main class="main"><div id="content" class="pretext-content"><section class="chapter" id="ch_vector_spaces"><h2 class="heading">
 <span class="type">Chapter</span> <span class="codenumber">3</span> <span class="title">Vector Spaces</span>
 </h2>
-<nav class="summary-links"><ul><li><a href="section-10.html" class="internal"><span class="codenumber">3.1</span> <span class="title">Definitions</span></a></li></ul></nav></section></div></main>
+<nav class="summary-links"><ul>
+<li><a href="section-10.html" class="internal"><span class="codenumber">3.1</span> <span class="title">Definitions</span></a></li>
+<li><a href="section-11.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Subspaces</span></a></li>
+</ul></nav></section></div></main>
 </div>
 </body>
 </html>
