--- a/knowl/example-4.html
+++ b/knowl/example-4.html
@@ -16,11 +16,7 @@
 </h3>
 <p>The following sets are also vector spaces:</p>
 <ol class="decimal">
-<li><p>The set of all polynomials (in variable <span class="process-math">\(t\)</span>) denoted <span class="process-math">\(\mathbb{P}\text{.}\)</span> %\item <span class="process-math">\((\mathbb{R})^\mathbb{Z}\text{,}\)</span> the set of bi-infinite sequences of real numbers. If <span class="process-math">\(x \in (\mathbb{R})^\mathbb{Z}\text{,}\)</span> then <span class="process-math">\(x=... x_{-3},x_{-2},x_{-1}, x_0,x_1,x_2,x_3,...\)</span> where <span class="process-math">\(x_i \in \mathbb{R}\text{.}\)</span> Scalar multiplication and vector addition are done coordinate-wise in this vector space, i.e.<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-x+y = ..., x_{-3}+y_{-3} , x_{-2}+y_{-2} , x_{-1}+y_{-1} , x_0+y_0 , x_1+y_1 , x_2+x_2 , x_3+y_3,...
-\end{equation*}
-</div></p></li>
+<li><p>The set of all polynomials (in variable <span class="process-math">\(t\)</span>) denoted <span class="process-math">\(\mathbb{P}\text{.}\)</span></p></li>
 <li><p><span class="process-math">\(F(S,\mathbb{R})\text{,}\)</span> the set of functions from a set <span class="process-math">\(S\)</span> to the real numbers. We will take a closer look at this vector space in the next problem.</p></li>
 <li><p><span class="process-math">\(\{\vec{0}\}\text{,}\)</span> the <dfn class="terminology">trivial vector space</dfn>.</p></li>
 </ol></article><span class="incontext"><a href="section-10.html#example-4" class="internal">in-context</a></span>
