--- a/knowl/li-55.html
+++ b/knowl/li-55.html
@@ -12,8 +12,7 @@
 </head>
 <body class="ignore-math">
 <article class="li"><h4 class="heading">
-<span class="type">Item</span><span class="space"> </span><span class="codenumber">3</span><span class="period">.</span>
-</h4>
-<span class="process-math">\(\{\vec{0}\}\text{,}\)</span> the <dfn class="terminology">trivial vector space</dfn>.</article><span class="incontext"><a href="section-10.html#li-55" class="internal">in-context</a></span>
+<span class="type">Item</span><span class="period">.</span>
+</h4>Let <span class="process-math">\(g_1\)</span> be the function that takes <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> to <span class="process-math">\(3\text{,}\)</span> <span class="process-math">\(-2\text{,}\)</span> and <span class="process-math">\(0\)</span> respectively.</article><span class="incontext"><a href="section-10.html#li-55" class="internal">in-context</a></span>
 </body>
 </html>
