--- a/sec_solving_linear_systems.html
+++ b/sec_solving_linear_systems.html
@@ -136,7 +136,10 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 </ul>
 </li>
 <li class="link">
-<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li></ul>
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul>
+<li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li>
+<li><a href="section-11.html" data-scroll="section-11" class="internal">Subspaces</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
