--- a/section-10.html
+++ b/section-10.html
@@ -94,10 +94,10 @@ window.MathJax = {
 </div></div>
 <nav id="primary-navbar" class="navbar"><div class="container">
 <div class="navbar-top-buttons">
-<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="ch_vector_spaces.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="ch_vector_spaces.html" title="Up">Up</a><span id="nextbutton" class="next-button button toolbar-item disabled">Next</span></span></div>
+<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="ch_vector_spaces.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="ch_vector_spaces.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="section-11.html" title="Next">Next</a></span></div>
 </div>
 <div class="navbar-bottom-buttons toolbar toolbar-divisor-4">
-<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="ch_vector_spaces.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="ch_vector_spaces.html" title="Up">Up</a><span class="next-button button toolbar-item disabled">Next</span>
+<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="ch_vector_spaces.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="ch_vector_spaces.html" title="Up">Up</a><a class="next-button button toolbar-item" href="section-11.html" title="Next">Next</a>
 </div>
 </div></nav></header><div class="page">
 <div id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
@@ -130,7 +130,10 @@ window.MathJax = {
 </ul>
 </li>
 <li class="link">
-<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="active">Definitions</a></li></ul>
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul>
+<li><a href="section-10.html" data-scroll="section-10" class="active">Definitions</a></li>
+<li><a href="section-11.html" data-scroll="section-11" class="internal">Subspaces</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
@@ -205,14 +208,46 @@ window.MathJax = {
 </h3>
 <p id="p-253">The following sets are also vector spaces:</p>
 <ol class="decimal">
-<li id="li-52"><p id="p-derived-li-52">The set of all polynomials (in variable <span class="process-math">\(t\)</span>) denoted <span class="process-math">\(\mathbb{P}\text{.}\)</span> %\item <span class="process-math">\((\mathbb{R})^\mathbb{Z}\text{,}\)</span> the set of bi-infinite sequences of real numbers. If <span class="process-math">\(x \in (\mathbb{R})^\mathbb{Z}\text{,}\)</span> then <span class="process-math">\(x=... x_{-3},x_{-2},x_{-1}, x_0,x_1,x_2,x_3,...\)</span> where <span class="process-math">\(x_i \in \mathbb{R}\text{.}\)</span> Scalar multiplication and vector addition are done coordinate-wise in this vector space, i.e.<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-x+y = ..., x_{-3}+y_{-3} , x_{-2}+y_{-2} , x_{-1}+y_{-1} , x_0+y_0 , x_1+y_1 , x_2+x_2 , x_3+y_3,...
-\end{equation*}
-</div></p></li>
+<li id="li-52"><p id="p-derived-li-52">The set of all polynomials (in variable <span class="process-math">\(t\)</span>) denoted <span class="process-math">\(\mathbb{P}\text{.}\)</span></p></li>
 <li id="li-53"><p id="p-derived-li-53"><span class="process-math">\(F(S,\mathbb{R})\text{,}\)</span> the set of functions from a set <span class="process-math">\(S\)</span> to the real numbers. We will take a closer look at this vector space in the next problem.</p></li>
 <li id="li-54"><p id="p-derived-li-54"><span class="process-math">\(\{\vec{0}\}\text{,}\)</span> the <dfn class="terminology">trivial vector space</dfn>.</p></li>
-</ol></article></section></div></main>
+</ol></article><article class="investigation project-like" id="investigation-59"><h3 class="heading">
+<span class="type">Question</span><span class="space"> </span><span class="codenumber">3.6</span><span class="period">.</span>
+</h3>
+<div class="introduction" id="introduction-23">
+<p id="p-254">We are going to take a look at the vector space <span class="process-math">\(V=F(\{a,b,c\},\mathbb{R})\)</span> to get used to our more general way of thinking about vectors and vector spaces. You should think of the vector space <span class="process-math">\(V\)</span> as the set of functions with domain <span class="process-math">\(\{a,b,c\}\)</span> and codomain <span class="process-math">\(\mathbb{R}\text{.}\)</span> In other words, we are looking at the set of functions that only use <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> as inputs and have outputs of real numbers.</p>
+<ul class="disc">
+<li id="li-55"><p id="p-derived-li-55">Let <span class="process-math">\(g_1\)</span> be the function that takes <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> to <span class="process-math">\(3\text{,}\)</span> <span class="process-math">\(-2\text{,}\)</span> and <span class="process-math">\(0\)</span> respectively.</p></li>
+<li id="li-56"><p id="p-derived-li-56">Let <span class="process-math">\(g_2\)</span> be the function that takes <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> to <span class="process-math">\(-2\text{,}\)</span> <span class="process-math">\(7\text{,}\)</span> and <span class="process-math">\(1\)</span> respectively.</p></li>
+<li id="li-57"><p id="p-derived-li-57">Let <span class="process-math">\(g_3\)</span> be the function that takes <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> to <span class="process-math">\(1\text{,}\)</span> <span class="process-math">\(1\text{,}\)</span> and <span class="process-math">\(1\)</span> respectively.</p></li>
+<li id="li-58"><p id="p-derived-li-58">Let <span class="process-math">\(g_4\)</span> be the function that takes <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> to <span class="process-math">\(0\text{,}\)</span> <span class="process-math">\(0\text{,}\)</span> and <span class="process-math">\(0\)</span> respectively.</p></li>
+</ul>
+</div>
+<article class="task exercise-like" id="task-87"><h4 class="heading"><span class="codenumber">(a)</span></h4>
+<ol id="p-255" class="decimal">
+<li id="li-59"><p id="p-derived-li-59">Fill in the blank: <span class="process-math">\(g_2(b) =\)</span><span class="fillin underline" role="img" aria-label="2-character blank" style="width: 0.909090909090909em;"></span></p></li>
+<li id="li-60"><p id="p-derived-li-60">Fill in the blank: <span class="process-math">\(g_3(a) =\)</span><span class="fillin underline" role="img" aria-label="2-character blank" style="width: 0.909090909090909em;"></span></p></li>
+<li id="li-61"><p id="p-derived-li-61">Fill in the blank: <span class="process-math">\(g_1(c) =\)</span><span class="fillin underline" role="img" aria-label="2-character blank" style="width: 0.909090909090909em;"></span></p></li>
+</ol></article><article class="task exercise-like" id="task-88"><h4 class="heading"><span class="codenumber">(b)</span></h4>
+<p id="p-256">Does it make sense to add the inputs of these functions? Explain.</p></article><article class="task exercise-like" id="task-89"><h4 class="heading"><span class="codenumber">(c)</span></h4>
+<p id="p-257">Does it make sense to add the outputs of these functions? Explain.</p></article><article class="task exercise-like" id="task-90"><h4 class="heading"><span class="codenumber">(d)</span></h4>
+<p id="p-258">Let <span class="process-math">\(g_5\)</span> be the function that takes <span class="process-math">\(5\text{,}\)</span> <span class="process-math">\(1\text{,}\)</span> and <span class="process-math">\(0\)</span> to <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> respectively. Is <span class="process-math">\(g_5 \in V\text{?}\)</span></p></article><article class="task exercise-like" id="task-91"><h4 class="heading"><span class="codenumber">(e)</span></h4>
+<p id="p-259">Describe the function <span class="process-math">\(g_1 +g_2\text{.}\)</span> In other words, give the outputs for all possible inputs and write a sentence about how you built <span class="process-math">\(g_1+g_2\)</span> in terms of <span class="process-math">\(g_1\)</span> and <span class="process-math">\(g_2\text{.}\)</span></p></article><article class="task exercise-like" id="task-92"><h4 class="heading"><span class="codenumber">(f)</span></h4>
+<p id="p-260">Describe the function <span class="process-math">\(3 g_3\text{.}\)</span></p></article><article class="task exercise-like" id="task-93"><h4 class="heading"><span class="codenumber">(g)</span></h4>
+<p id="p-261">What function when added to <span class="process-math">\(g_2\)</span> will give <span class="process-math">\(g_4\text{?}\)</span></p></article><article class="task exercise-like" id="task-94"><h4 class="heading"><span class="codenumber">(h)</span></h4>
+<p id="p-262">Can you write <span class="process-math">\(g_1\)</span> as a linear combination of the set <span class="process-math">\(\{ g_2 , g_3 , g_4\}\text{?}\)</span> Explain why or why not.</p></article><article class="task exercise-like" id="task-95"><h4 class="heading"><span class="codenumber">(i)</span></h4>
+<p id="p-263">Can you write <span class="process-math">\(g_4\)</span> as a linear combination of the set <span class="process-math">\(\{ g_2 , g_3 , g_1\}\text{?}\)</span> Explain why or why not.</p></article></article><article class="investigation project-like" id="investigation-60"><h3 class="heading">
+<span class="type">Question</span><span class="space"> </span><span class="codenumber">3.7</span><span class="period">.</span>
+</h3>
+<article class="task exercise-like" id="task-96"><h4 class="heading"><span class="codenumber">(a)</span></h4>
+<p id="p-264">Write a sentence or two about what property makes a vector <span class="process-math">\(\vec{v}
+\in V\)</span> the zero vector for <span class="process-math">\(V\text{,}\)</span> called <span class="process-math">\(\vec{0}_V\text{.}\)</span></p></article><article class="task exercise-like" id="task-97"><h4 class="heading"><span class="codenumber">(b)</span></h4>
+<p id="p-265">What is the zero vector for the vector space <span class="process-math">\(M_{m \times
+n}\text{?}\)</span> Remember to state your answer as an element of <span class="process-math">\(M_{m
+\times n}\text{.}\)</span></p></article><article class="task exercise-like" id="task-98"><h4 class="heading"><span class="codenumber">(c)</span></h4>
+<p id="p-266">What is the zero vector for the vector space <span class="process-math">\(\mathbb{P}_n\text{?}\)</span> Remember to state your answer as an element of <span class="process-math">\(\mathbb{P}_n\text{.}\)</span></p></article><article class="task exercise-like" id="task-99"><h4 class="heading"><span class="codenumber">(d)</span></h4>
+<p id="p-267">What is the zero vector for the vector space <span class="process-math">\(\mathbb{P}\text{?}\)</span> Remember to state your answer as an element of <span class="process-math">\(\mathbb{P}\text{.}\)</span></p></article><article class="task exercise-like" id="task-100"><h4 class="heading"><span class="codenumber">(e)</span></h4>
+<p id="p-268">What is the zero vector for the vector space <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{?}\)</span> Remember to state your answer as an element of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p></article></article></section></div></main>
 </div>
 </body>
 </html>
