--- a/ch_solving_sys.html
+++ b/ch_solving_sys.html
@@ -148,6 +148,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 <a href="ch_connecting_ideas.html" data-scroll="ch_connecting_ideas" class="internal"><span class="codenumber">4</span> <span class="title">Connecting Ideas</span></a><ul>
 <li><a href="section-15.html" data-scroll="section-15" class="internal">Basis and Dimension</a></li>
 <li><a href="section-16.html" data-scroll="section-16" class="internal">Invertible Matrices</a></li>
+<li><a href="section-17.html" data-scroll="section-17" class="internal">Determinants</a></li>
 </ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
