--- a/knowl/investigation-130.html
+++ b/knowl/investigation-130.html
@@ -14,17 +14,6 @@
 <article class="investigation project-like"><h4 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">4.22</span><span class="period">.</span>
 </h4>
-<div class="introduction">
-<p>For each of the following vectors, compute <span class="process-math">\([\vec{v}]_{\beta}\)</span> where</p>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-\beta =\{ \begin{bmatrix} 1\amp 2\\3\amp 4  \end{bmatrix}, \begin{bmatrix} 1\amp 0\\0\amp 1  \end{bmatrix}, \begin{bmatrix} 0\amp 1\\1\amp 0  \end{bmatrix}, \begin{bmatrix} 1\amp 0\\0\amp 0 \end{bmatrix} \}\text{.}
-\end{equation*}
-</div>
-</div>
-<article class="task exercise-like"><h5 class="heading"><span class="codenumber">(a)</span></h5>
-<p><span class="process-math">\(\vec{v}=\begin{bmatrix} 1\amp 1\\1\amp 1
-\end{bmatrix}\)</span></p></article><article class="task exercise-like"><h5 class="heading"><span class="codenumber">(b)</span></h5>
-<p><span class="process-math">\(\vec{v}=\begin{bmatrix} 1\amp 0\\1\amp 1  \end{bmatrix}\)</span></p></article></article><span class="incontext"><a href="section-15.html#investigation-130" class="internal">in-context</a></span>
+<p>Give all values of <span class="process-math">\(k\)</span> where <span class="process-math">\(A=\begin{bmatrix} 1\amp 0\amp 2\\-1\amp k\amp 4\\3\amp 5\amp 1 \end{bmatrix}\)</span> will be invertible.</p></article><span class="incontext"><a href="section-16.html#investigation-130" class="internal">in-context</a></span>
 </body>
 </html>
